# Tidalwave_Interface

./: .gitignore  CMakeLists.txt  README.md  Tidalwave_Interface.qmlproject  Tidalwave_Interface.qmlproject.qtds  package.xml  qds.cmake
App/autogen/: environment.h
Backend/: CMakeLists.txt  Model.hpp  main.cpp  ros2.cpp  ros2.hpp
Backend/StateSaver/: Collections.hpp  StateSaver.cpp  StateSaver.hpp
Backend/custom_interfaces/: CMakeLists.txt  package.xml
Backend/custom_interfaces/msg/: Battery.msg  Gamepad.msg  Imu.msg  State.msg
Backend/test/: test_main.cpp
Backend/test/ROS2_ONLY/: test_main.cpp
Tidalwave_Frontend/: CMakeLists.txt  Constants.qml  qmldir
Tidalwave_Frontend/designer/: plugin.metainfo
Tidalwave_FrontendContent/: CMakeLists.txt
Tidalwave_Interface/: CMakeLists.txt  Constants.qml  qds.cmake
Tidalwave_Interface/App/autogen/: environment.h
Tidalwave_Interface/Tidalwave_Interface/: qmldir
Tidalwave_Interface/designer/: plugin.metainfo
Tidalwave_InterfaceContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
src/FrontEnd/: .qmlproject  CMakeLists.txt  main.cpp  main.qml  main.qrc
src/Tidalwave_Frontend/: CMakeLists.txt  Tidalwave_Frontend.qmlproject
src/Tidalwave_Frontend/Tidalwave_FrontendContent/: App.qml  Screen01.ui.qml
tidalwave_rs/: Cargo.toml
tidalwave_rs/src/: main.rs
tidalwave_rs/src/Backend/: Backend_C++.cpp  CMakeLists.txt  ros2.cpp  ros2.hpp
tidalwave_rs/src/Backend/custom_interfaces/: README.md
tidalwave_rs/src/Backend/custom_interfaces/msg/: Position.msg  Pwms.msg
tidalwave_rs/src/Backend/custom_interfaces/srv/: ControlMode.srv
tidalwave_rs/src/Backend/test/: test_main.cpp
tidalwave_rs/src/Backend/test/ROS2_ONLY/: test_main.cpp
